--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "MIT",
   "dependencies": {
     "@openzeppelin/contracts": "^4.9.1",
+    "@truffle/hdwallet-provider": "^2.1.12",
     "async-handler": "^0.0.3",
     "axios": "^1.4.0",
     "bcryptjs": "^2.4.3",
