--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.0",
     "react-redux": "^8.0.5",
-    "react-router-dom": "^6.9.0"
+    "react-router-dom": "^6.9.0",
+    "web3": "^4.0.1"
   },
   "devDependencies": {
     "concurrently": "^7.6.0",
