--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,11 +11,11 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.5",
     "dotenv": "^16.1.4",
+    "ethers": "^5.7.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.10.0",
-    "react-toastify": "^9.1.3",
-    "web3": "^4.0.1"
+    "react-toastify": "^9.1.3"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
