--- a/package.json
+++ b/package.json
@@ -21,13 +21,13 @@
     "colors": "^1.4.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
+    "ethers": "^5.7.2",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.0",
     "react-redux": "^8.0.5",
-    "react-router-dom": "^6.9.0",
-    "web3": "^4.0.1"
+    "react-router-dom": "^6.9.0"
   },
   "devDependencies": {
     "concurrently": "^7.6.0",
