--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,9 +9,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-pdf/renderer": "^3.1.12",
     "@reduxjs/toolkit": "^1.9.5",
     "dotenv": "^16.1.4",
     "ethers": "^5.7.2",
+    "file-saver": "^2.0.5",
+    "fs": "^0.0.1-security",
+    "html2pdf.js": "^0.10.1",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.5.29",
+    "pdfkit": "^0.13.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.10.0",
