--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "ethers": "^5.7.2",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
+    "html-pdf": "^3.0.1",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.0",
     "react-redux": "^8.0.5",
